# logflyer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  notes.txt
logflayer-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
logflayer-ui/src/: App.vue  style.css
logflayer-ui/src/api/: client.ts
logflayer-ui/src/components/: TargetForm.vue
logflayer-ui/src/router/: index.ts
logflayer-ui/src/stores/: logflayer.ts
logflayer-ui/src/types/: index.ts
logflayer-ui/src/views/: AdminView.vue  ClassificationsView.vue  DashboardView.vue  LogsView.vue  SamplesView.vue  TargetsView.vue  TrackerView.vue
secret_manager/: docker-compose.yml  infisical.env.example
src/: backfill.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  models.rs  sampling.rs  utils.rs
src/api/: admin.rs  classifications.rs  logs.rs  mod.rs  samples.rs  targets.rs  tracking.rs
src/classification/: client.rs  mod.rs  prompt.rs
src/notification/: mod.rs
src/preprocessing/: agentic_scanner.rs  format_detector.rs  hints.rs  mod.rs  schema_extractor.rs  stats.rs
src/repository/: mod.rs  mongo.rs
src/service/: application.rs
src/ssh/: inspector.rs  mod.rs
